PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Documentation updates
pts-core: External dependency updates
pts-core: Allow listing test profiles within the result viewer
pts-core: Various other updates to the result viewer

Phoronix Test Suite 9.6.0 Milestone 1
24 March 2020

pts-core: Add new analyze-run-times sub-command
pts-core: Allow hiding results from within the result viewer
pts-core: Allow generating performance-per-dollar metrics from within the result file
pts-core: Allow showing system logs from the result viewer
pts-core: Allow showing test description within the result viewer
pts-core: Fixes for running the result viewer from a website sub directory in correctly loading assets
pts-core: Add result viewer option "hide noisy results"
pts-core: Add result viewer option "hide results with little change/spread"
pts-core: Add result viewer option "only show results where X faster than Y"
pts-core: Add XML export to result viewer export menu
pts-core: Support deleting runs from the result viewer
pts-core: Improve the print view from the result viewer
phodevi: BSD tweaks/fixes

Phoronix Test Suite 9.4.1
4 March 2020

Various minor bug fixes and OpenBenchmarking.org cache update

Phoronix Test Suite 9.4.0-Vestby
25 February 2020

pts-core: Add option in the result viewer to allow compacting multi-option test results into single graphs
pts-core: Add option in the result viewer to allow compacting multi-version test results into single graphs
pts-core: Add Parent tag to result file schema for specifying relation to other result objects
pts-core: Report test profile support errors when intended
pts-core: Fix showing NVIDIA test options on non-Linux NVIDIA platforms
pts-core: Don't show delete/annotation options for dynamically generated result objects where those options are not relevant
pts-core: Allow showing performance-per-suite option within result viewer