@@ -5,6 +5,7 @@ Phoronix Test Suite (Git)
 pts-core: Documentation updates
 pts-core: External dependency updates
 pts-core: Allow listing test profiles within the result viewer
+pts-core: Allow showing test profile information within the result viewer
 pts-core: Various other updates to the result viewer
 
 Phoronix Test Suite 9.6.0 Milestone 1
